--- a/OneCircleWeb/Views/web.config
+++ b/OneCircleWeb/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="_1CircleWeb" />
+        <add namespace="OneCircleWeb" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
