--- a/OneCircleWeb/OneCircleWeb.csproj
+++ b/OneCircleWeb/OneCircleWeb.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -111,11 +112,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="index.html" />
+    <Content Include="Scripts\lib\Business.js" />
+    <Content Include="Scripts\lib\Home.js" />
+    <Content Include="Scripts\lib\Place.js" />
+    <Content Include="Scripts\lib\Shop.js" />
+    <Content Include="Scripts\main.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\WebApi\PlacesController.cs" />
     <Compile Include="DAL\Business.cs" />
     <Compile Include="DAL\Home.cs" />
     <Compile Include="DAL\OneCircleDbContext.cs" />
@@ -124,12 +132,22 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510110015136_Initial.cs" />
+    <Compile Include="Migrations\201510110015136_Initial.Designer.cs">
+      <DependentUpon>201510110015136_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510111341121_Changed from DbGeography to latlon.cs" />
+    <Compile Include="Migrations\201510111341121_Changed from DbGeography to latlon.Designer.cs">
+      <DependentUpon>201510111341121_Changed from DbGeography to latlon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="bower.json" />
+    <Content Include="package.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -139,8 +157,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="Migrations\201510111341021_Changed from DbGeography to lat\" />
+    <Folder Include="Models\WebApi\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510110015136_Initial.resx">
+      <DependentUpon>201510110015136_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510111341121_Changed from DbGeography to latlon.resx">
+      <DependentUpon>201510111341121_Changed from DbGeography to latlon.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
