--- a/OneCircleWeb/bower.json
+++ b/OneCircleWeb/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "requirejs": "~2.1.20",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "knockout": "knockoutjs#~3.3.0"
   }
 }
