--- a/OneCircleWeb/OneCircleWeb.csproj
+++ b/OneCircleWeb/OneCircleWeb.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\wait-spinner.gif" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
     <Content Include="Scripts\lib\Business.js" />
