--- a/OneCircleWeb/bower.json
+++ b/OneCircleWeb/bower.json
@@ -16,6 +16,8 @@
     "requirejs": "~2.1.20",
     "jquery": "~2.1.4",
     "knockout": "knockoutjs#~3.3.0",
-    "text": "requirejs-text#~2.0.14"
+    "text": "requirejs-text#~2.0.14",
+    "q": "~1.4.1",
+    "grapnel": "~0.6.2"
   }
 }
